2003-04-10  Darin Adler  <darin@apple.com>

        Reviewed by Trey.

        - speed up startup by not loading the hand cursor until it's used

        * khtml/khtml_part.cpp: (KHTMLPart::urlCursor): Use the hand cursor.
        * khtml/khtmlpart_p.h: Don't store the hand cursor in a per-part global.

2003-04-10  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fixed 3224077 -- REGRESSION: tables on MacNN forums messed up because we reject %% due to style parser

        * khtml/css/tokenizer.flex: Add a + sign after the % in the percentage rule so we allow
        any number of extra percent signs. This is a temporary hack.

        * khtml/css/Makefile.am: Add make rules to build tokenizer.cpp so we don't have to do it by hand.
        * khtml/css/maketokenizer: Added. Script used by the make rules.
        * khtml/css/tokenizer.cpp: Regenerated. The only substantive change is in the state tables.

2003-04-09  David Hyatt  <hyatt@apple.com>

        This first fix is a refinement of the patch I produced to fix <nobr>
	on cnn.com recently.  It wasn't quite good enough to plug the
	regression on other sites.  This fix just checks the object
	we're currently breaking on (which is what I meant to do) and
	not the last object examined (which will always just be the
	previous object you looked at).

	The code currently in the tree would work if you had two objects
	like this:

	[Normal Whitespace] [Nowrap Whitespace]

	but not if you had three:

	[Normal][Nowrap][Nowrap]

	Since when you looked at the third object, |last| would be the
	previous nowrap object and not the normal object.  The line break
	properly stays at the normal object as long as nowrap objects are
	encountered, so this patch basically does what the original was
	intended to do.

	This fixes the line break problems on 1800flowers.com, a line break
	problem on the bugzilla.mozilla.org layout test, a problem
	on the zdnet layout test, and 3207196 a regression on livejournal.
